# feluda

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ACTION-README.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  action.yml  justfile
.githooks/: pre-commit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  generic-issue-template.md
.github/workflows/: ci.yml  feluda.yml  release-binaries.yml
.rpm/: feluda.spec
config/: license_compatibility.toml
examples/: README.md
examples/c-example/: Makefile  README.md  main.c
examples/ci/: Jenkinsfile  README.md  license-check.yml
examples/cpp-example/: CMakeLists.txt  README.md  main.cpp
examples/dotnet-example/: Example.csproj  Program.cs  README.md
examples/go-example/: README.md  go.mod  go.sum  main.go
examples/node-example/: README.md  index.js
examples/python-example/: README.md  main.py  requirements.txt
examples/r-example/: DESCRIPTION  README.md
examples/r-example/R/: example.R
examples/rust-example/: Cargo.toml  README.md
examples/rust-example/src/: main.rs
src/: cache.rs  cli.rs  config.rs  debug.rs  generate.rs  license_cache.rs  licenses.rs  main.rs  parser.rs  progress.rs  reporter.rs  table.rs  utils.rs
src/languages/: c.rs  cpp.rs  dotnet.rs  go.rs  mod.rs  node.rs  python.rs  r.rs  rust.rs
src/sbom/: cyclonedx.rs  mod.rs  spdx.rs
src/sbom/validate/: cyclonedx_validator.rs  mod.rs  parser.rs  reporter.rs  spdx_validator.rs
