[package]
name = "feluda"
version = "1.11.0"
edition = "2021"
description = "A CLI tool to check dependency licenses."
readme = "README.md"
license = "MIT"
repository = "https://github.com/anistark/feluda"
homepage = "https://github.com/anistark/feluda"
keywords = ["cli", "license", "dependencies", "node", "check"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "config/**", "Cargo.toml", "README.md", "LICENSE"]
documentation = "https://docs.rs/feluda"
rust-version = "1.70.0"

[dependencies]
cargo_metadata = "0.23.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "blocking",
    "rustls-tls",
    "http2"
] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.140"
scraper = "0.25.0"
owo-colors = "4.2.3"
color-eyre = { version = "0.6.5", default-features = false }
color-spantrace = "0.3.0"
ratatui = "0.29.0"
unicode-width = "0.2.0"
spinners = "4.1.1"
serde_yaml = "0.9.34"
colored = "3.0.0"
rayon = "1.11.0"
figment = { version = "0.10", features = ["toml", "env"] }
ignore = "0.4.25"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
toml = "0.9.8"
regex = "1.12.2"
thiserror = "2.0.17"
backtrace = { version = "0.3.76", optional = true }
tracing = { version = "0.1.43", features = ["attributes"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.42", features = ["serde"] }
git2 = { version = "0.20.2", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3.23.0"
dirs = "6.0.0"
semver = "1.0.27"

[target.'cfg(unix)'.dependencies]
libc = "0.2.178"

[dev-dependencies]
tempfile = "3.19.1"
mockall = "0.14.0"
http = "1.4.0"
temp-env = "0.3.1"
serial_test = "3.2.0"

[features]
default = []
advanced-debug = ["backtrace"]

[[bin]]
name = "feluda"

# Example binaries for testing Feluda with different language ecosystems
[[example]]
name = "rust-example"
path = "examples/rust-example/src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
[package.metadata.rpm]
package = "feluda"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
feluda = { path = "/usr/bin/feluda" }
