[package]
name = "feluda"
version = "1.11.0"
edition = "2021"
description = "A CLI tool to check dependency licenses."
readme = "README.md"
license = "MIT"
repository = "https://github.com/anistark/feluda"
homepage = "https://github.com/anistark/feluda"
keywords = ["cli", "license", "dependencies", "node", "check"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**", "config/**", "Cargo.toml", "README.md", "LICENSE"]
documentation = "https://docs.rs/feluda"
rust-version = "1.85.0"

[dependencies]
cargo_metadata = "0.23"
clap = { version = "4.5.54", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "blocking",
    "rustls",
    "http2"
] }
tokio = { version = "1.49", features = ["full"] }
serde_json = "1.0"
scraper = "0.25"
owo-colors = "4.2"
color-eyre = { version = "0.6", default-features = false }
color-spantrace = "0.3"
ratatui = "0.30.0"
unicode-width = "0.2.2"
spinners = "4.1"
serde_yaml = "0.9"
colored = "3.0"
rayon = "1.11"
figment = { version = "0.10", features = ["toml", "env"] }
ignore = "0.4"
uuid = { version = "1.19", features = ["v4", "serde"] }
toml = "0.9.8"
regex = "1.12"
thiserror = "2.0"
backtrace = { version = "0.3", optional = true }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
tempfile = "3.24"
dirs = "6.0"
semver = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.24"
mockall = "0.14"
http = "1.4"
temp-env = "0.3"
serial_test = "3.3"

[features]
default = []
advanced-debug = ["backtrace"]

[[bin]]
name = "feluda"

# Example binaries for testing Feluda with different language ecosystems
[[example]]
name = "rust-example"
path = "examples/rust-example/src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
[package.metadata.rpm]
package = "feluda"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
feluda = { path = "/usr/bin/feluda" }
