[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# These dependencies have transient dependencies
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.0", features = ["derive"] }
